# mod-notification-handler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yaml
app/: config.py  email.py  email_content.py  main.py  moderators.py  process.py  schema.py
app/templates/: comment.py  email_body.py  new_prop.py  promote.py  prop_resp.py  submission.py
cicd/: Dockerfile  cloudbuild.yaml
tests/: conftest.py  data.sql  test_email_content.py  test_get_messages.py  test_moderators.py  test_process_message.py
