[tool.poetry]
name = "mod-notification-handler"
version = "0.1.0"
description = "processes notifications for moderators"
authors = ["Erin Aster <erin@arxiv.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "8135d213c8409297e807f1d9a73709799b9750ef"}
google-cloud-pubsub = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
