[tool.poetry]
name = "mod-notification-handler"
version = "0.1.0"
description = "processes notifications for moderators"
authors = ["Erin Aster <erin@arxiv.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "4c53f9bf6b77cceeb8ec71942e53a5b32ceb7cad"}
google-cloud-pubsub = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
